# sprntly-app

./: .dockerignore  .env.example  .gitignore  BRANCHING.md  README.md  TESTING.md  UX-AUDIT.md  requirements.txt  sample_analytics.csv
.github/workflows/: deploy-agent.yml  deploy-app.yml  deploy-backend.yml  deploy-frontend.yml  deploy-mcp.yml  migration-repair.yml  prototype-runtime.yml  repair-migrations.yml  security-guard.yml  sync-backend-env.yml  test-agent.yml  test-backend-realbuild.yml  test-backend.yml  test-web.yml
app/: config.py
app/routes/: chat.py  health.py
backend/: .env.example  .pt.txt  .pt_full.txt  .venv  Dockerfile  README.md  _ws_brief_diag.txt  pytest.ini  requirements.txt
backend/app/: ask_job_runner.py  ask_runner.py  attachments_storage.py  auth.py  backfill_previews.py  brief_gate.py  brief_nudge.py  brief_runner.py  brief_schedule.py  business_context.py  call_digest.py  cli.py  company_document.py  company_template.py  config.py  connector_health.py  connector_probe.py  corpus.py  coworkers.py  datasets.py  db.py  document_sources.py  drip_email.py  entitlements.py  evidence_kg.py  evidence_runner.py  html_style.py  ingest.py  insight_types.py  invite_reminders.py  jira_lookup.py  knowledge_graph.py  kpi_tree.py  llm.py  llm_context.py  llm_keys.py  llm_telemetry.py  main.py  middleware_llm_key.py  multi_agent_orchestrator.py  (+22 more)
backend/data/: README.md  sprntly_evidence_sample.md  sprntly_evidence_template.md  (+5 more)
deploy/: nginx.conf  setup.sh  sprintly.service
ds-agent/: .env.example  .gitignore  README.md  pyproject.toml
ds-agent/deploy/: setup.sh  sprntly-agent-staging.service  sprntly-agent.service
ds-agent/ds_agent/: cli.py  ingest.py  pipeline.py  post_processing.py  routing.py  sentry.py  synthesis.py  synthetic.py  types.py
ds-agent/ds_agent/legacy/: confidence.py  output.py  test_pipeline_e2e.py
ds-agent/ds_agent/legacy/stages/: pattern_discovery.py
ds-agent/ds_agent/server/: __main__.py  agents.py  app.py  auth.py  backend_client.py  chat.py  pipeline.py  state.py  tools.py
ds-agent/ds_agent/server/samples/: saas_retention.csv
ds-agent/ds_agent/server/static/: app.js  index.html  style.css
ds-agent/ds_agent/stages/: causal_validation.py  interaction_discovery.py  tail_analysis.py  temporal_dynamics.py
ds-agent/ds_agent/tiers/: comprehensive.py  deep.py  express.py
ds-agent/tests/: synth_fixtures.py  test_causal_validation.py  test_chat_shape.py  test_comprehensive_tier.py  test_deep_tier.py  test_express_tier.py  test_interaction_discovery.py  test_post_processing.py  test_routing.py  test_server_auth.py  test_server_samples.py  test_tail_analysis.py  test_temporal_dynamics.py
mcp/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  v2-features.md
mcp/deploy/: setup.sh  sprntly-mcp-staging.service  sprntly-mcp.service
mcp/mcp_server/: __main__.py  app.py  auth.py  backend_client.py  middleware.py  sentry.py  tools.py
mcp/tests/: test_app_role_scoping.py  test_server_auth.py  test_tools.py
prototype-runtime/: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts  tsconfig.json  vite-plugin-anchor-id.ts  vite.config.ts  vitest.config.ts
scripts/: apply_migrations.py  convert_dataset.py
supabase/: MIGRATIONS.md  config.toml
web/: .env.example  README.md  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
(+1653 files in other folders)
