[project]
name = "sprntly-ds-agent"
version = "0.0.1"
description = "Sprntly data-science agent — discovers behavioral drivers from analytics data."
requires-python = ">=3.10"
dependencies = [
    # Synthetic data generator + bundled sample. Stage-1 pipeline lives in
    # ds_agent/legacy/ and is no longer imported by the running service.
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    # Web service for /agent
    "anthropic>=0.104",
    "python-dotenv>=1.0",
    "click>=8.1",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.27",  # FastAPI TestClient transport
]

[project.scripts]
ds-agent = "ds_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ds_agent", "ds_agent.server", "ds_agent.legacy", "ds_agent.legacy.stages"]

[tool.setuptools.package-data]
"ds_agent.server" = ["static/*", "samples/*.csv"]
