[project]
name = "sprntly-mcp"
version = "0.0.1"
description = "Sprntly MCP server — customer-facing Model Context Protocol tools over the Sprntly backend."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.9",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    # Error tracking (gated on SENTRY_DSN, see mcp_server/sentry.py). The
    # Starlette integration auto-attaches to the FastMCP ASGI app.
    "sentry-sdk>=2.20,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
